--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
 	</parent>
 	<properties>
 		<java.version>1.8</java.version>
+
+        <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
+        <springsecurity.version>4.1.1.RELEASE</springsecurity.version>
+        <assertj.version>3.4.1</assertj.version>
+        <junit.version>4.12</junit.version>
+        <wiremock.version>2.1.12</wiremock.version>
+        <okhttp.version>2.7.5</okhttp.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -27,13 +34,53 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-		</dependency> <!-- equivalent to gradle: compile 'org.springframework:spring-context-support' -->
+		</dependency>
+		
 
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>2.9.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.16.16</version>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>${wiremock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring.boot.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp.version}</version>
+        </dependency>
+        <!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${springsecurity.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${springsecurity.version}</version>
 		</dependency>
 	</dependencies>
 
