--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,17 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.1.RELEASE</version>
+		<version>1.5.6.RELEASE</version>
 	</parent>
 	<properties>
 		<java.version>1.8</java.version>
 
-        <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
-        <springsecurity.version>4.1.1.RELEASE</springsecurity.version>
-        <assertj.version>3.4.1</assertj.version>
-        <junit.version>4.12</junit.version>
-        <wiremock.version>2.1.12</wiremock.version>
-        <okhttp.version>2.7.5</okhttp.version>
+		<spring.boot.version>1.5.6.RELEASE</spring.boot.version>
+		<springsecurity.version>4.1.1.RELEASE</springsecurity.version>
+		<assertj.version>3.4.1</assertj.version>
+		<junit.version>4.12</junit.version>
+		<wiremock.version>2.1.12</wiremock.version>
+		<okhttp.version>2.7.5</okhttp.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -35,7 +35,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
-		
+
 
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
@@ -49,29 +49,54 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
-            <version>${wiremock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring.boot.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>${okhttp.version}</version>
-        </dependency>
-        <!-- Spring Security -->
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>${wiremock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring.boot.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>${okhttp.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>${wiremock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring.boot.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-contract-wiremock</artifactId>
+		    <version>1.0.1.RELEASE</version>
+		</dependency>
+		<!-- <dependency>
+	        <groupId>com.github.tomakehurst</groupId>
+	        <artifactId>wiremock-standalone</artifactId>
+	        <version>2.6.0</version>
+	        <scope>test</scope>
+	    </dependency> -->
+	    
+
+		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
